# gpt-experiments

./: README.md  benchmark.py  benchmark_tokenizer.py  dataset.py  embedding.py  gpt.py  main.py  multi_head_attention.py  pyproject.toml  self_attention.py  test_tokenizer.py  tokenizer.py  train.py  transformer_block.py
