[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "training-scratch"
version = "0.1.0"
requires-python = ">= 3.10"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-benchmark",
]

[tool.setuptools]
py-modules = ["tokenizer", "main"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
